--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ai.h" />
+    <ClInclude Include="DropSolver.h" />
     <ClInclude Include="RandomSolver.h" />
     <ClInclude Include="Solvers.hpp" />
     <ClInclude Include="DfsSolver.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="ai.cpp" />
     <ClCompile Include="DfsSolver.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="DropSolver.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
