--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -45,6 +45,24 @@
     <ClInclude Include="DropSolver.h">
       <Filter>Solvers</Filter>
     </ClInclude>
+    <ClInclude Include="HeuristicBase.h">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
+    <ClInclude Include="HeuristicHelpers.h">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
+    <ClInclude Include="HolyHeuristic.h">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
+    <ClInclude Include="AiController.h">
+      <Filter>Solvers</Filter>
+    </ClInclude>
+    <ClInclude Include="Heuristics.hpp">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
+    <ClInclude Include="OrangeJuiceHeuristic.h">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ai.cpp">
@@ -64,6 +82,21 @@
     </ClCompile>
     <ClCompile Include="DropSolver.cpp">
       <Filter>Solvers</Filter>
+    </ClCompile>
+    <ClCompile Include="HeuristicBase.cpp">
+      <Filter>Heuristics</Filter>
+    </ClCompile>
+    <ClCompile Include="HeuristicHelpers.cpp">
+      <Filter>Heuristics</Filter>
+    </ClCompile>
+    <ClCompile Include="HolyHeuristic.cpp">
+      <Filter>Heuristics</Filter>
+    </ClCompile>
+    <ClCompile Include="AiController.cpp">
+      <Filter>Solvers</Filter>
+    </ClCompile>
+    <ClCompile Include="OrangeJuiceHeuristic.cpp">
+      <Filter>Heuristics</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
