--- a/unit_tests/unit_tests.vcxproj.filters
+++ b/unit_tests/unit_tests.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="unit_test_board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unit_test_frontier_stack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
