--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Heuristics">
       <UniqueIdentifier>{6c505a6b-5446-4760-9787-5750bc28f9ba}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Helpers">
+      <UniqueIdentifier>{26f47f19-145e-4214-91e1-65b97b65730d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
@@ -66,6 +69,9 @@
     <ClInclude Include="SolutionSequence.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FrontierStack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ai.cpp">
@@ -102,6 +108,9 @@
       <Filter>Heuristics</Filter>
     </ClCompile>
     <ClCompile Include="SolutionSequence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FrontierStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
