Fixing DFS. Now DFS seems generates all or most end states. Still needs work

--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="MoveStatePair.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MoveGenerator.h">
+      <Filter>Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core.cpp">
