--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="KeyboardController.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Move.h" />
+    <ClInclude Include="MoveGenerator.h" />
     <ClInclude Include="MoveStatePair.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RandomizedBag.h" />
