--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -163,8 +163,10 @@
   <ItemGroup>
     <ClInclude Include="ai.h" />
     <ClInclude Include="AiController.h" />
+    <ClInclude Include="AppleCiderHeuristic.h" />
     <ClInclude Include="DropSolver.h" />
     <ClInclude Include="FrontierStack.h" />
+    <ClInclude Include="GrapeJuiceHeuristic.h" />
     <ClInclude Include="HeuristicBase.h" />
     <ClInclude Include="HeuristicHelpers.h" />
     <ClInclude Include="Heuristics.hpp" />
@@ -180,10 +182,12 @@
   <ItemGroup>
     <ClCompile Include="ai.cpp" />
     <ClCompile Include="AiController.cpp" />
+    <ClCompile Include="AppleCiderHeuristic.cpp" />
     <ClCompile Include="DfsSolver.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="DropSolver.cpp" />
     <ClCompile Include="FrontierStack.cpp" />
+    <ClCompile Include="GrapeJuiceHeuristic.cpp" />
     <ClCompile Include="HeuristicBase.cpp" />
     <ClCompile Include="HeuristicHelpers.cpp" />
     <ClCompile Include="HolyHeuristic.cpp" />
