--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -23,13 +23,13 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{8cd4bb51-ad07-4903-862f-4e165824bad9}</ProjectGuid>
     <RootNamespace>ai</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -171,6 +171,7 @@
     <ClInclude Include="HeuristicHelpers.h" />
     <ClInclude Include="Heuristics.hpp" />
     <ClInclude Include="HolyHeuristic.h" />
+    <ClInclude Include="Optimizer.h" />
     <ClInclude Include="OrangeJuiceHeuristic.h" />
     <ClInclude Include="RandomSolver.h" />
     <ClInclude Include="SolutionSequence.h" />
@@ -191,6 +192,7 @@
     <ClCompile Include="HeuristicBase.cpp" />
     <ClCompile Include="HeuristicHelpers.cpp" />
     <ClCompile Include="HolyHeuristic.cpp" />
+    <ClCompile Include="Optimizer.cpp" />
     <ClCompile Include="OrangeJuiceHeuristic.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
