Added text files to save notes

--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -135,4 +135,7 @@
       <Filter>Optimizers</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="notes.txt" />
+  </ItemGroup>
 </Project>
