--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -203,6 +203,9 @@
     <ClCompile Include="RandomSolver.cpp" />
     <ClCompile Include="SolutionSequence.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="notes.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
