--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -69,20 +69,23 @@
     <ClInclude Include="OrangeJuiceHeuristic.h">
       <Filter>Heuristics</Filter>
     </ClInclude>
-    <ClInclude Include="SolutionSequence.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FrontierStack.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GrapeJuiceHeuristic.h">
       <Filter>Heuristics</Filter>
     </ClInclude>
-    <ClInclude Include="AppleCiderHeuristic.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Optimizer.h">
       <Filter>Optimizers</Filter>
+    </ClInclude>
+    <ClInclude Include="Individual.h">
+      <Filter>Optimizers</Filter>
+    </ClInclude>
+    <ClInclude Include="AppleCiderHeuristic.h">
+      <Filter>Heuristics</Filter>
+    </ClInclude>
+    <ClInclude Include="FrontierStack.h">
+      <Filter>Helpers</Filter>
+    </ClInclude>
+    <ClInclude Include="SolutionSequence.h">
+      <Filter>Helpers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -119,20 +122,23 @@
     <ClCompile Include="OrangeJuiceHeuristic.cpp">
       <Filter>Heuristics</Filter>
     </ClCompile>
-    <ClCompile Include="SolutionSequence.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="FrontierStack.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GrapeJuiceHeuristic.cpp">
       <Filter>Heuristics</Filter>
     </ClCompile>
-    <ClCompile Include="AppleCiderHeuristic.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Optimizer.cpp">
       <Filter>Optimizers</Filter>
+    </ClCompile>
+    <ClCompile Include="Individual.cpp">
+      <Filter>Optimizers</Filter>
+    </ClCompile>
+    <ClCompile Include="AppleCiderHeuristic.cpp">
+      <Filter>Heuristics</Filter>
+    </ClCompile>
+    <ClCompile Include="FrontierStack.cpp">
+      <Filter>Helpers</Filter>
+    </ClCompile>
+    <ClCompile Include="SolutionSequence.cpp">
+      <Filter>Helpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
