--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Individual.h" />
     <ClInclude Include="Optimizer.h" />
     <ClInclude Include="OrangeJuiceHeuristic.h" />
+    <ClInclude Include="PineappleSlushy.h" />
     <ClInclude Include="RandomSolver.h" />
     <ClInclude Include="SolutionSequence.h" />
     <ClInclude Include="Solvers.hpp" />
@@ -202,6 +203,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PineappleSlushy.cpp" />
     <ClCompile Include="RandomSolver.cpp" />
     <ClCompile Include="SolutionSequence.cpp" />
   </ItemGroup>
