--- a/driver/driver.vcxproj.filters
+++ b/driver/driver.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Notes">
+      <UniqueIdentifier>{5005e1dc-589c-48fc-9f38-4e12d88be2ae}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TetrisMain.cpp">
@@ -40,7 +43,17 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="program_options_notes.txt" />
-    <Text Include="updates.txt" />
+    <Text Include="program_options_notes.txt">
+      <Filter>Notes</Filter>
+    </Text>
+    <Text Include="updates.txt">
+      <Filter>Notes</Filter>
+    </Text>
+    <Text Include="weights.txt">
+      <Filter>Notes</Filter>
+    </Text>
+    <Text Include="do_next.txt">
+      <Filter>Notes</Filter>
+    </Text>
   </ItemGroup>
 </Project>
