--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{8cd4bb51-ad07-4903-862f-4e165824bad9}</ProjectGuid>
     <RootNamespace>ai</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -176,6 +176,7 @@
     <ClInclude Include="OrangeJuiceHeuristic.h" />
     <ClInclude Include="PineappleSlushy.h" />
     <ClInclude Include="RandomSolver.h" />
+    <ClInclude Include="Session.h" />
     <ClInclude Include="SolutionSequence.h" />
     <ClInclude Include="Solvers.hpp" />
     <ClInclude Include="DfsSolver.h" />
@@ -205,6 +206,7 @@
     </ClCompile>
     <ClCompile Include="PineappleSlushy.cpp" />
     <ClCompile Include="RandomSolver.cpp" />
+    <ClCompile Include="Session.cpp" />
     <ClCompile Include="SolutionSequence.cpp" />
   </ItemGroup>
   <ItemGroup>
