--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -94,7 +94,7 @@
       <Filter>Heuristics</Filter>
     </ClInclude>
     <ClInclude Include="Session.h">
-      <Filter>Header Files</Filter>
+      <Filter>Optimizers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -153,7 +153,7 @@
       <Filter>Heuristics</Filter>
     </ClCompile>
     <ClCompile Include="Session.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Optimizers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
