Implemented DFS2 and DFS3 solvers. Work great. Might be benificial to clear pieces before evaluating heuristic.

--- a/ai/ai.vcxproj
+++ b/ai/ai.vcxproj
@@ -164,6 +164,8 @@
     <ClInclude Include="ai.h" />
     <ClInclude Include="AiController.h" />
     <ClInclude Include="AppleCiderHeuristic.h" />
+    <ClInclude Include="DfsSolver2.h" />
+    <ClInclude Include="DfsSolver3.h" />
     <ClInclude Include="DropSolver.h" />
     <ClInclude Include="FrontierStack.h" />
     <ClInclude Include="GrapeJuiceHeuristic.h" />
@@ -188,6 +190,8 @@
     <ClCompile Include="AiController.cpp" />
     <ClCompile Include="AppleCiderHeuristic.cpp" />
     <ClCompile Include="DfsSolver.cpp" />
+    <ClCompile Include="DfsSolver2.cpp" />
+    <ClCompile Include="DfsSolver3.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="DropSolver.cpp" />
     <ClCompile Include="FrontierStack.cpp" />
