--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="GamePlayer.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="ColoredChar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core.cpp">
@@ -187,6 +190,9 @@
     </ClCompile>
     <ClCompile Include="GamePlayer.cpp">
       <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="ColoredChar.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
