--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="DfsSolver3.h">
       <Filter>Solvers</Filter>
     </ClInclude>
+    <ClInclude Include="DfsSolverMT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ai.cpp">
@@ -166,6 +169,9 @@
     </ClCompile>
     <ClCompile Include="DfsSolver3.cpp">
       <Filter>Solvers</Filter>
+    </ClCompile>
+    <ClCompile Include="DfsSolverMT.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
