--- a/ai/ai.vcxproj.filters
+++ b/ai/ai.vcxproj.filters
@@ -103,7 +103,7 @@
       <Filter>Solvers</Filter>
     </ClInclude>
     <ClInclude Include="DfsSolverMT.h">
-      <Filter>Header Files</Filter>
+      <Filter>Solvers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +171,7 @@
       <Filter>Solvers</Filter>
     </ClCompile>
     <ClCompile Include="DfsSolverMT.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Solvers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
